--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -1,44 +1,100 @@
 /* Login.css */
+:root {
+  --card-background: #3b3b3b;
+  --accent-color: #63ade5;
+  --primary-text-color: #f1edee;
+}
+.wrapper {
+  /*used to center the login card in the middle of the webpage*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
 .login-form {
-    width: 300px;
-    margin: 0 auto;
-  }
-  
-  .form-group {
-    display: grid;
-    grid-template-columns: 1fr; /* Single column layout */
-    margin-bottom: 15px;
-    /* text-align: left; */
-  }
-  
-  label {
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  input {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .error {
-    color: red;
-    margin-top: 10px;
-  }
-  
-  button {
-    padding: 10px 15px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+  width: 420px;
+  background: var(--card-background);
+  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
+    0px 0px 2.9px rgba(0, 0, 0, 0.22);
+  color: var(--primary-text-color);
+  border-radius: 10px;
+  padding: 30px 40px;
+}
+
+.wrapper h1 {
+  font-size: 2.25rem;
+  text-align: center;
+}
+
+.wrapper .form-group {
+  position: relative; /*Used to help position icons, since icons will be absolute to the form input*/
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+
+.form-group input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
+  outline: none;
+  padding: 20px 45px 20px 20px;
+  font-size: 1.05rem;
+  color: whitesmoke;
+}
+.form-group input::placeholder {
+  font-weight: 500;
+}
+.form-group i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.rememberForgot {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1rem;
+  margin: 15px 0 15px;
+}
+.rememberForgot label input {
+  accent-color: var(--primary-text-color);
+  margin-right: 3px;
+}
+.rememberForgot a {
+  /*forgot password? link*/
+  color: var(--primary-text-color);
+  text-decoration: underline;
+}
+.rememberForgot a:hover {
+  text-decoration: none;
+}
+.loginButton {
+  width: 100%;
+  height: 45px;
+  background-color: var(--accent-color);
+  border: none;
+  outline: none;
+  border-radius: 45px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.registerLink {
+  font-size: 1rem;
+  text-align: center;
+  margin-top: 20px;
+  margin: 20px 0 15px;
+}
+.registerLink p a {
+  color: var(--primary-text-color);
+  text-decoration: underline;
+  font-weight: 600;
+}
+.registerLink p a:hover {
+  text-decoration: none;
+}
