--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-background: #333333;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,5 +10,5 @@
 }
 
 body {
-  background-color: #1a1a1a;
+  background-color: var(--primary-background);
 }
