--- a/frontend/src/components/ReviewDetails.css
+++ b/frontend/src/components/ReviewDetails.css
@@ -1,5 +1,8 @@
 :root {
-  --main-text-color: rgba(255, 255, 255, 0.87);
+  --card-background: #3b3b3b;
+  --primary-text-color: #f1edee;
+  --secondary-text-color: #dedbdb;
+  --accent-color: #63ade5;
 }
 .courseDetailsPage {
   display: flex;
@@ -8,26 +11,41 @@
 }
 .submitReviewOutline {
   font-size: 1.1rem;
-  color: var(--main-text-color);
-  background-color: #333333;
+  color: var(--primary-text-color);
+  background-color: var(--card-background);
   border-radius: 10px;
+  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
+    0px 0px 2.9px rgba(0, 0, 0, 0.22);
   width: 300px;
   margin: 20px 10px;
   padding-top: 10px;
   text-align: center;
 }
 .submitReviewOutline input {
+  /*general style for all the inputs*/
   width: 75px;
   background-color: transparent;
   border: none;
-  border-bottom: 2px solid var(--main-text-color);
+  border-bottom: 2px solid var(--primary-text-color);
   font-size: 1rem;
   margin-bottom: 20px;
+}
+.submitReviewOutline .reviewStatInput {
+  width: 30px;
+  color: var(--primary-text-color);
+  text-align: center;
+}
+.submitReviewOutline input[type="number"]::-webkit-inner-spin-button,
+.submitReviewOutline input[type="number"]::-webkit-outer-spin-button {
+  /*Remmove the number increment*/
+  -webkit-appearance: none;
+  margin: 0;
 }
 .submitReviewOutline input:focus {
   outline: none;
 }
 .submitReviewOutline button {
+  /*General style for the buttons*/
   border: none;
   border-radius: 15px;
   padding: 10px 5px;
@@ -35,35 +53,40 @@
   width: 120px;
   font-weight: 600;
 }
+.submitReviewOutline button:hover {
+  border: 2px solid black;
+}
 #submit {
-  background-color: green;
-  color: white;
+  /*Accent color for the submit button*/
+  background-color: var(--accent-color);
 }
 .courseInfo {
   margin-left: 15px;
 }
 .courseName {
-  font-size: 3rem;
-  color: var(--main-text-color);
+  font-size: 2.85rem;
+  color: var(--primary-text-color);
   padding-bottom: 20px;
 }
 .courseCode {
-  color: var(--main-text-color);
+  color: var(--secondary-text-color);
   padding-bottom: 10px;
 }
 .reviewDetails {
   /*main div for the review info*/
   display: flex;
   gap: 50px;
-  color: var(--main-text-color);
-  background-color: #333333;
+  color: var(--primary-text-color);
+  background-color: var(--card-background);
   border-radius: 10px;
+  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
+    0px 0px 2.9px rgba(0, 0, 0, 0.22);
   padding: 25px 15px;
   max-width: 900px;
   margin-left: 10px;
 }
 .reviewGradeStat {
-  /**/
+  color: var(--primary-text-color);
   text-align: center;
   margin-bottom: 25px;
 }
@@ -83,10 +106,14 @@
   gap: 35px;
   justify-content: space-between;
 }
+.starIcon {
+  /*Adjust color of the star*/
+  color: var(--accent-color);
+}
 .writtenReviews {
   /*Adjust div containing all written review details*/
   margin-top: 30px;
-  background-color: #1a1a1a;
+  background-color: #333333;
   padding: 10px 20px;
   border-radius: 10px;
 }
