--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -31,7 +31,7 @@
   position: relative; /*Used to help position icons, since icons will be absolute to the form input*/
   width: 100%;
   height: 50px;
-  margin: 30px 0;
+  margin: 21px 0;
 }
 
 .form-group input {
@@ -97,4 +97,7 @@
 }
 .registerLink p a:hover {
   text-decoration: none;
+}
+.error {
+  text-align: center;
 }
