--- a/frontend/src/components/ReviewDetails.css
+++ b/frontend/src/components/ReviewDetails.css
@@ -10,6 +10,12 @@
   border-radius: 10px;
 }
 .submitReviewOutline {
+  /* Align vertically and center */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
   font-size: 1.1rem;
   color: var(--primary-text-color);
   background-color: var(--card-background);
@@ -17,12 +23,57 @@
   box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
     0px 0px 2.9px rgba(0, 0, 0, 0.22);
   width: 300px;
-  margin: 20px 10px;
+  margin: 70px 10px 20px 10px;
   padding-top: 10px;
+  padding-bottom: 20px;
+}
+/*Select box start*/
+.selectContainer {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 150px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+.selectBox {
+  appearance: none;
+  padding: 0 30px 0 15px;
+  width: 100%;
+  color: white;
+  background-color: var(--card-background);
+  text-align: center;
+  border-radius: 20px;
+  outline: none;
+}
+.selectBox option {
   text-align: center;
 }
+#favColor:hover {
+  cursor: pointer;
+}
+.selectContainer .selectSerachIconContainer {
+  width: 25px;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  font-size: 30px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.selectSearchIconContainer i {
+  font-size: 30px;
+  color: black;
+}
+/*Select box end*/
+
 .submitReviewOutline input {
-  /*general style for all the inputs*/
   width: 75px;
   background-color: transparent;
   border: none;
@@ -30,20 +81,14 @@
   font-size: 1rem;
   margin-bottom: 20px;
 }
-.submitReviewOutline .reviewStatInput {
-  width: 30px;
-  color: var(--primary-text-color);
-  text-align: center;
+
+.starReviewContainer {
+  margin-bottom: 10px;
 }
-.submitReviewOutline input[type="number"]::-webkit-inner-spin-button,
-.submitReviewOutline input[type="number"]::-webkit-outer-spin-button {
-  /*Remmove the number increment*/
-  -webkit-appearance: none;
-  margin: 0;
+.starReviewContainer span:hover {
+  cursor: pointer;
 }
-.submitReviewOutline input:focus {
-  outline: none;
-}
+
 .submitReviewOutline button {
   /*General style for the buttons*/
   border: none;
@@ -65,7 +110,7 @@
   margin-left: 15px;
 }
 .courseName {
-  font-size: 2.85rem;
+  font-size: 2.2rem;
   color: var(--primary-text-color);
   padding-bottom: 20px;
 }
@@ -95,7 +140,7 @@
   font-weight: 500;
 }
 .reviewGradeStat h4 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 .starReviewsAndWrittenReview {
   /*Div for the titles listed below and the written review details*/
@@ -109,6 +154,7 @@
 }
 .starIcon {
   /*Adjust color of the star*/
+  font-size: 2rem;
   color: var(--accent-color);
 }
 .writtenReviews {
@@ -121,11 +167,25 @@
 .writtenReviewDetails {
   /*Div containing user name, written review, upvote/downvote*/
   margin-bottom: 20px;
+  position: relative;
 }
 .writtenReviewDetails > h5 {
   /*Adjust user name*/
   font-weight: 800;
-  font-size: 1.3rem;
+  font-size: 0.9rem;
+}
+
+.writtenReviewDetails > p {
+  /*Adjust review content*/
+  font-size: 1rem;
+}
+
+.writtenReviewDetails > span {
+  /*delete review icon*/
+  cursor: pointer;
+  position: absolute;
+  left: 95%;
+  top: 0%;
 }
 
 /**/
@@ -152,26 +212,38 @@
 .modal-content {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 40%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
-  background: var(--accent-color);
-  padding: 14px 28px;
+  background: #1f1f1f;
   border-radius: 3px;
   width: 600px;
   height: 300px;
 }
+.modalHeader {
+  background-color: #1f1f1f;
+  position: relative;
+  height: 10%; /* 10% for the header within modal-content container */
+  width: 100%;
+}
+.close-modal {
+  position: absolute; /*Relative to modalHeader  */
+  top: 15%;
+  left: 95%;
+}
+.close-modal:hover {
+  cursor: pointer;
+}
 textarea {
-  width: 450px;
-  height: 100px;
-  margin-top: 50px;
+  background-color: var(--card-background);
+  border: none;
+  width: 98%;
+  height: 88%; /* 90% for the body within modal-content container */
   outline: none;
   resize: none;
-}
-
-.close-modal {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 5px 7px;
+  color: white;
+  text-indent: 10px;
+  padding: 5px;
+  font-size: 0.95rem;
+  font-weight: 600;
 }
