--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -8,6 +8,9 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 1em; 
+  /* padding: 3px; */
+  /* border: 1px solid #ccc; */
 }
 .logoAndtext {
   display: flex;
@@ -53,6 +56,9 @@ a:hover {
 #navbar a:hover {
   color: greenyellow;
   transition: 0.3s ease-in-out;
+}
+.toggle-comp {
+    align-items: center;
 }
 #mobile {
   display: none;
