--- a/frontend/src/components/Toggle.css
+++ b/frontend/src/components/Toggle.css
@@ -1,13 +1,16 @@
 .toggle-container {
+  display: flex;
   position: relative;
 }
 .toggle {
   visibility: hidden;
+  height: 0;
+  width: 0;
 }
 .toggle + label {
   display: flex;
   align-items: center;
-  font-size: 1.5em;
+  /* font-size: 1.5em; */
   cursor: pointer;
 }
 .toggle + label::before {
