--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -1,9 +1,5 @@
 /* Login.css */
-:root {
-  --card-background: #3b3b3b;
-  --accent-color: #63ade5;
-  --primary-text-color: #f1edee;
-}
+
 .wrapper {
   /*used to center the login card in the middle of the webpage*/
   display: flex;
@@ -14,7 +10,8 @@
 
 .login-form {
   width: 420px;
-  background: var(--card-background);
+  background: var(--login-register-card-background);
+  border: 1px solid var(--border-color);
   box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
     0px 0px 2.9px rgba(0, 0, 0, 0.22);
   color: var(--primary-text-color);
@@ -38,15 +35,16 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid var(--border-color);
   border-radius: 40px;
   outline: none;
   padding: 20px 45px 20px 20px;
   font-size: 1.05rem;
-  color: whitesmoke;
+  color: var(--primary-text-color);
 }
 .form-group input::placeholder {
-  font-weight: 500;
+  color: var(--searchbar-placeholder-color);
+  font-weight: 300;
 }
 .form-group i {
   position: absolute;
@@ -89,6 +87,7 @@
   text-align: center;
   margin-top: 20px;
   margin: 20px 0 15px;
+  cursor: pointer;
 }
 .registerLink p a {
   color: var(--primary-text-color);
