--- a/frontend/src/components/Register.css
+++ b/frontend/src/components/Register.css
@@ -9,10 +9,11 @@
 
 .register-form {
   width: 420px;
-  background: var(--card-background);
+  background: var(--login-register-card-background);
   box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.25),
     0px 0px 2.9px rgba(0, 0, 0, 0.22);
   color: var(--primary-text-color);
+  border: 1px solid var(--border-color);
   border-radius: 10px;
   padding: 30px 40px;
 }
@@ -33,12 +34,12 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid var(--border-color);
   border-radius: 40px;
   outline: none;
   padding: 20px 45px 20px 20px;
   font-size: 1.05rem;
-  color: whitesmoke;
+  color: var(--primary-text-color);
 }
 .form-group input::placeholder {
   font-weight: 500;
