--- a/frontend/src/components/SearchBar.css
+++ b/frontend/src/components/SearchBar.css
@@ -1,23 +1,17 @@
-/* :root {
-  --light-grey: #6f727a;
-  --background-color: #242424;
-} */
-
 .search {
   margin: 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100vh; /* 
-  background-color: var(--background-color); */
+  height: 100vh;
 }
 .search > h1 {
   margin-top: 105px;
   font-size: 60px;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--primary-text-color);
 }
 .search > h2 {
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--primary-text-color);
   text-align: center;
   font-weight: 100;
   font-size: 1.35rem;
@@ -28,12 +22,12 @@
 }
 
 .search input {
-  color: white;
+  color: var(--searchbar-text-color);
   background-color: var(--background-color);
   /*Create border for left side of search bar*/
-  border-left: 2px solid var(--light-grey);
-  border-top: 2px solid var(--light-grey);
-  border-bottom: 2px solid var(--light-grey);
+  border-left: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
   border-right: 0px;
   border-radius: 25px 0px 0px 25px; /*round the left side of the search bar*/
   /*End of border creation*/
@@ -45,7 +39,7 @@
 /*change background color when search bar is focused*/
 .search input:focus {
   outline: none;
-  background-color: var(--light-grey);
+  background-color: var(--border-color);
   border-radius: 25px 0px 0px 0px;
 }
 /* Styles for the search icon when the input is focused */
@@ -54,19 +48,19 @@
 }
 /*text color of placeholder text*/
 .search input::placeholder {
-  color: var(--light-grey);
+  color: var(--searchbar-placeholder-color);
 }
 .searchIcon {
   background-color: var(--background-color);
   /*Create border for the right side of search bar*/
   border-left: none;
-  border-top: 2px solid var(--light-grey);
-  border-right: 2px solid var(--light-grey);
-  border-bottom: 2px solid var(--light-grey);
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
   border-left: 0px;
   border-radius: 0px 25px 25px 0px; /*round the right side of the search bar*/
   /*End of border creation*/
-  color: var(--light-grey);
+  color: var(--primary-text-color);
   height: 40px; /*Must be same as .search input{}*/
   width: 50px;
   display: grid;
@@ -77,6 +71,7 @@
   font-size: 25px;
 }
 
+/*how the search results box looks */
 .dataResult {
   margin-top: 2px;
   width: 350px;
@@ -98,6 +93,7 @@
   align-items: center;
   color: white;
   font-weight: 600;
+  background-color: var(--border-color);
 }
 
 /*each search result is a <p> wrapped in <a>, now we will style it*/
