--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -61,7 +61,9 @@ a:hover {
 }
 #mobile {
   display: none;
+  color: var(--primary-text-color);
 }
+/* Styles for tablet screens and below */
 @media screen and (max-width: 769px) {
   #navbar {
     display: flex;
@@ -69,7 +71,7 @@ a:hover {
     align-items: flex-start;
     justify-content: flex-start;
     position: fixed;
-    top: 60px;
+    top: 61px;
     right: -300px;
     width: 300px;
     height: 100vh;
@@ -78,6 +80,8 @@ a:hover {
   }
   #navbar.active {
     right: 0;
+    background-color: var(--header-background);
+    z-index: 1;
   }
   #navbar li {
     margin-bottom: 25px;
@@ -89,73 +93,19 @@ a:hover {
     cursor: pointer;
   }
 }
-/* .header {
-    background-color: #282c34;
-    padding: 20px;
-    color: white;
-    text-align: right;
-}
 
-.header h1 {
-    margin: 0;
-    font-size: 2em;
+/* Styles for large phone screens and below */
+@media screen and (max-width: 426px) {
+  nav {
+    /* Utilize the full width of the nav bar */
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  #mobile {
+    /* Slightly push hamurger icon away from the edge of the screen  */
+    margin-right: 10px;
+  }
+  .navbarLinkContainer {
+    position: absolute; /*Removes empty placeholder space from the nav bar*/
+  }
 }
-
-.header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-.header nav ul li {
-    display: inline;
-}
-
-.header nav ul li a {
-    color: white;
-    text-decoration: none;
-    padding: 20px 28.5px 20px 28.5px;
-}
-
-.header nav ul li a:hover {
-    text-decoration: none;
-    color: black;
-    background-color: lightgoldenrodyellow;
-}
-
-.header nav img {
-    height: 40px;
-    display: block;
-    padding: 3px;
-    background-color: black;
-    border: 1px solid lightgoldenrodyellow;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-}
-.header nav .nav-links {
-    align-items: center;
-}
-
-.header nav .nav-logo {
-    align-items: center;
-}
-
-.header nav .nav-logo a {
-    text-decoration: none;
-    display: block;
-    margin: 0;
-    padding: 0;
-}
-
-.header nav .nav-logo a:hover {
-    text-decoration: none;
-    
-} */
