--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -17,6 +17,7 @@
   color: var(--primary-text-color);
   border-radius: 10px;
   padding: 30px 40px;
+  z-index: 0; /* Used so nav bar in mobile view appears on top when expanded */
 }
 
 .wrapper h1 {
@@ -99,4 +100,32 @@
 }
 .error {
   text-align: center;
+}
+
+/* Styles for large phone screens and below */
+@media screen and (max-width: 426px) {
+  .login-form {
+    width: 345px;
+  }
+  .wrapper h1 {
+    font-size: 1.75em;
+  }
+}
+
+/* Styles for small phone screens */
+@media screen and (max-width: 321px) {
+  .login-form {
+    width: 300px;
+    padding: 10px 20px;
+  }
+  .wrapper h1 {
+    font-size: 1.75em;
+  }
+  .form-group input {
+    height: 80%;
+    font-size: 0.85rem;
+  }
+  .loginButton {
+    height: 35px;
+  }
 }
