--- a/frontend/src/components/Toggle.css
+++ b/frontend/src/components/Toggle.css
@@ -12,6 +12,7 @@
   align-items: center;
   /* font-size: 1.5em; */
   cursor: pointer;
+  color: var(--accent-color);
 }
 .toggle + label::before {
   content: "";
