--- a/frontend/src/components/Dropdown.css
+++ b/frontend/src/components/Dropdown.css
@@ -1,41 +1,42 @@
 /* Dropdown.css */
 .dropdown {
-    position: relative;
-    display: inline-block;
-    color: var(--primary-text-color);
-  }
-  
-  .dropdown-email {
-    padding: 10px;
-    cursor: pointer;
-    background-color: var(--header-background);
-    color: var(--primary-text-color);
-    border-radius: 4px;
-  }
-  
-  .dropdown-menu {
-    /* display: flex;
+  position: relative;
+  display: inline-block;
+  color: var(--primary-text-color);
+}
+
+.dropdown-email {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  background-color: var(--header-background);
+  color: var(--primary-text-color);
+  border-radius: 4px;
+}
+
+.dropdown-menu {
+  /* display: flex;
     flex-direction: column; */
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: var(--header-background);
-    /* color: var(--primary-text-color); */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    z-index: 1;
-    min-width: 100%;
-  }
-  
-  .dropdown-menu a {
-    padding: 10px;
-    text-decoration: none;
-    color: var(--primary-text-color);
-    display: block;
-  }
-  
-  .dropdown-menu a:hover {
-    color: var(--accent-color);
-    transition: 0.3s ease-in-out;
-  }
-  
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--header-background);
+  /* color: var(--primary-text-color); */
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  z-index: 1;
+  min-width: 100%;
+}
+
+.dropdown-menu a {
+  padding: 10px;
+  text-decoration: none;
+  color: var(--primary-text-color);
+  display: block;
+}
+
+.dropdown-menu a:hover {
+  color: var(--accent-color);
+  transition: 0.3s ease-in-out;
+}
