--- a/frontend/src/components/ReviewDetails.css
+++ b/frontend/src/components/ReviewDetails.css
@@ -344,9 +344,40 @@ option[default] {
   justify-content: 'center';
 };
 
-.dialog {
-  background-color: '#fff';
-  padding: '20px';
-  border-radius: '5px';
-  text-align: 'center';
-};
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.popup-inner {
+  background-color: var(--card-background);
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 100%;
+  /* max-width: 500px; */
+  color: var(--primary-text-color);
+}
+
+.popup-inner > button {
+  border: none;
+  border-radius: 15px;
+  padding: 7px 1px;
+  margin: 5px 10px;
+  width: 120px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
