--- a/frontend/src/components/ReviewDetails.css
+++ b/frontend/src/components/ReviewDetails.css
@@ -230,18 +230,26 @@
   background: rgba(49, 49, 49, 0.8);
 }
 .modal-content {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   position: absolute;
   top: 50%;
   left: 40%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
-  background: #1f1f1f;
+  background: var(--border-color);
   border-radius: 3px;
   width: 600px;
   height: 300px;
+  color: var(--primary-text-color);
+}
+/* Class to specifically adjust the submission modal box  */
+.submission {
+  height: 175px;
 }
 .modalHeader {
-  background-color: #1f1f1f;
+  background-color: var(--header-background);
   position: relative;
   height: 10%; /* 10% for the header within modal-content container */
   width: 100%;
@@ -266,6 +274,19 @@ textarea {
   padding: 5px;
   font-size: 0.95rem;
   font-weight: 600;
+}
+.submissionModalContent {
+  height: 100%;
+  h2 {
+    margin-top: 10px;
+  }
+  h4 {
+    margin-top: 10px;
+  }
+
+  button {
+    display: inline;
+  }
 }
 
 /* Styles for laptop screens and below */
@@ -326,58 +347,4 @@ textarea {
   .starReviews {
     gap: 15px;
   }
-}
-
-option[default] {
-  display: none;
-}
-
-.overlay {
-  position: 'fixed';
-  top: 0;
-  left: 0;
-  width: '100%';
-  height: '100%';
-  background-color: 'rgba(0, 0, 0, 0.5)';
-  display: 'flex';
-  align-items: 'center';
-  justify-content: 'center';
-};
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 1px solid var(--border-color);
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-}
-
-.popup-inner {
-  background-color: var(--card-background);
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  width: 100%;
-  /* max-width: 500px; */
-  color: var(--primary-text-color);
-}
-
-.popup-inner > button {
-  border: none;
-  border-radius: 15px;
-  padding: 7px 1px;
-  margin: 5px 10px;
-  width: 120px;
-  font-size: 0.75rem;
-  font-weight: 600;
 }
